<resources>
    <string name="app_name">EKG-App</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="heartImage">Heart Image</string>
    <string name="smart_ekg">Smart EKG</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="start">Start</string>
    <string name="new_user_sign_up">New User? Sign up</string>
    <string name="ble_scan_button">Ble Scan Button</string>
    <string name="view_for_app_main_icon">view for App main icon</string>
    <string name="already_have_an_account_login">Already have an account ? LogIn</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="full_name">Full Name</string>
    <string name="signup_to_start_tracking">SignUp to start tracking</string>
    <string name="welcome">Welcome</string>
    <string name="test">Test</string>
    <string name="update">Update</string>
    <string name="tel_Number">+49- 178199940</string>
    <string name="phone_number">Phone Number</string>
    <string name="testMail">TestEmail@gmail.com</string>
    <string name="testName">Mustermann</string>
    <string name="record_ekg">Record EKG</string>
    <string name="user_profile">User Profile</string>
    <string name="start_scan">Start Scan</string>
    <string name="start_tracking_your_heart">Start tracking your heart</string>
    <string name="logout">Logout</string>
</resources>